--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,24 @@
-version: '3'
+version: '3.10'
 services:
   db:
-    image: my-postgres-image
+    image: postgres:latest
     environment:
       - POSTGRES_USER=todo_user
       - POSTGRES_PASSWORD=my_password
       - POSTGRES_DB=todo_list
+      - POSTGRES_HOST=db
     ports:
       - 5432:5432
 
   web:
     build:
       context: .
-      dockerfile: Dockerfile.django.txt
+      dockerfile: Dockerfile
     ports:
       - 8000:8000
+    environment:
+      - POSTGRES_USER=todo_user
+      - POSTGRES_PASSWORD=my_password
+      - POSTGRES_DB=todo_list
     depends_on:
       - db
